feat: Add Entry API
